WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172699
[WinCairo] TestWebKitAPI: SHOULD NEVER BE REACHED in WebCore::cairoSurfaceSize
https://bugs.webkit.org/show_bug.cgi?id=172699
Summary
[WinCairo] TestWebKitAPI: SHOULD NEVER BE REACHED in WebCore::cairoSurfaceSize
Fujii Hironori
Reported
2017-05-29 22:10:34 PDT
WinCairo port, debug buid, trunk@217540. TestWebCore --gtest_filter=WebCore.BitmapImageEmptyFrameTest causes an assertion failure:
> SHOULD NEVER BE REACHED > C:\webkit\ga\Source\WebCore\platform\graphics\cairo\CairoUtilities.cpp(313) : WebCore::cairoSurfaceSize
Attachments
Patch
(1.93 KB, patch)
2017-05-29 22:15 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-05-29 22:15:27 PDT
Created
attachment 311493
[details]
Patch
Brent Fulgham
Comment 2
2017-05-30 07:04:13 PDT
Comment on
attachment 311493
[details]
Patch R=me
WebKit Commit Bot
Comment 3
2017-05-30 07:31:29 PDT
Comment on
attachment 311493
[details]
Patch Clearing flags on attachment: 311493 Committed
r217553
: <
http://trac.webkit.org/changeset/217553
>
WebKit Commit Bot
Comment 4
2017-05-30 07:31:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-05-30 20:19:03 PDT
<
rdar://problem/32479641
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug