[WinCairo] TestWebKitAPI: SHOULD NEVER BE REACHED in WebCore::cairoSurfaceSize https://bugs.webkit.org/show_bug.cgi?id=172699

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-05-30
Reviewed by Brent Fulgham.

Tests: WebCore.BitmapImageEmptyFrameTest in TestWebKitAPI

* platform/graphics/cairo/CairoUtilities.cpp:
(WebCore::cairoSurfaceSize): Added a case for win32 surface type.

Canonical link: https://commits.webkit.org/189603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217553 268f45cc-cd09-0410-ab3c-d52691b4dbfc